# test_task_drf_2

./: README.md  pyproject.toml  requirements.txt
tt_drf/djangoProject/djangoProject/: settings.py  urls.py
tt_drf/djangoProject/test_app/: models.py  serializers.py  urls.py  views.py
